<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/Log_Display" >

        <ListPreference
            android:defaultValue="V"
            android:entries="@array/level_entries"
            android:entryValues="@array/level_values"
            android:key="level"
            android:summary="Log level used to display log entries."
            android:title="@string/Level"/>

        <ListPreference
            android:defaultValue="BRIEF"
            android:entries="@array/format_entries"
            android:entryValues="@array/format_values"
            android:key="format"
            android:summary="Log format to use when displaying log entries."
            android:title="@string/Format" />

        <ListPreference
            android:defaultValue="MAIN"
            android:entries="@array/buffer_entries"
            android:entryValues="@array/buffer_values"
            android:key="buffer"
            android:summary="Log buffer to display."
            android:title="@string/Buffer" />

        <ListPreference
            android:defaultValue="MEDIUM"
            android:entries="@array/textsize_entries"
            android:entryValues="@array/textsize_values"
            android:key="textsize"
            android:summary="Text size to use when displaying log entries."
            android:title="@string/Text_size" />

        <ListPreference
            android:defaultValue="#ffffff"
            android:entries="@array/backgroundColor_entries"
            android:entryValues="@array/backgroundColor_values"
            android:key="backgroundColor"
            android:summary="Background color to use when displaying log entries."
            android:title="@string/Background_color" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="keepScreenOn"
            android:summary="Prevent screen from turning off when application is running."
            android:title="@string/Keep_Screen_On" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/Log_Output" >

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="shareHtml"
            android:summary="Share logs in HTML format"
            android:title="@string/HTML" />
    </PreferenceCategory>
</PreferenceScreen>